agregar nueva informacion

--- a/prueba.html
+++ b/prueba.html
@@ -1,9 +1,46 @@
+<!DOCTYPE html>
+</head>
+<hr>
+<html lang="es">
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    
+</body>
+</html>
+</body>
+    <meta charset="IE=8">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Isabel-kiara</title>
+    <meta name="author" content="de temporada">
+    <meta name="descripcion" content="unica pagina">
+    <meta name="keywords" content="solo temporada isabelkiara">
+    <meta http-equiv="refresh" content="S; url=http://google.com">
+    <meta http-equiv="cookies" content="user, Isabel-kiara">
+    <link rel="stylesheet" href="style.css">
+    <hr>
+
+<title>imagen de fondo</title>
+<link rel="stylesheet" href="stylle.css">
+
+    <head>
+<body>
+
+ <script src="style.css"></script>
+</body>
+    </head>
+
 </head><h1>YsabelKiara</h1>
  <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur quisquam libero perferendis reprehenderit, maiores ratione? Magni, minus. Perferendis pariatur eaque quod excepturi impedit! Dolorum aperiam tenetur blanditiis. A, error soluta!</p> --> 
 <button>hacer click</button>
-<img src="./imagen.jpg" alt="./">
+<input type="color" name="lila" id="lila">
+
+<img src="imagen.jpg" alt="./">
 <h1>
     <h2>
         ventas de temporada
@@ -19,28 +56,43 @@
 
 <p> aqui algunos articulos Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia maxime numquam sint eum sit esse perspiciatis eligendi quo obcaecati. hr Provident id quod iste ipsum cum ullam repudiandae enim est explicabo?</p>
 <hr>
-    <link rel="stylesheet" href="">
-<form action=" cuadro a la izquiertda">
-<fieldset>
-    <legend> remera </legend>
-     <formularion:hr></formularion:hr>
-     <p>
-        nombre: <font-family></font-family><font-size>Large</font-size><text-transform></text-transform><hr>
-        apellido: <font-family></font-family><font-size>Large</font-size><text-transform></text-transform><hr>
+    <h2>Formulario</h2>
+<form>
+    <label for="usuario">usuario</label>
+    <input type="" id="usuaruio" size="talles"
+    name="nombre" placeholder="nombre">
+    <hr>
+    <label for="contraseña">contraseña</label>
+    <input type="password" id="password" size="tamaño"
+    name="password" placeholder="escriba una contraseña">
+    <hr>
+    <input type="checkbox" name="talles" value="S"> S
+    <input type="checkbox" name="talles" value="m"> M
+    <input type="checkbox" name="small" value="L"> L
+    <hr>
+<input value="L">Large>
+<input value="M">Medium>
+<input value="S">Small>
+<hr>
 
-     </p>
-
-     <form action="talle">
-        <select name="talle" id="talle">
-<option value="L">Large</option>
-<option value="M">Medium</option>
-<option value="S">Small</option>
-        </select>
-     </form> <hr>
-    <button>enviar</button>
-</fieldset>
+</file dset>
 </form>
-    
+    <hr>
+    <label for="tiendeo"></label>
+    <textarea type="file" id="usuario" size="tamaño"
+     name="comentario" placeholder="escribe tu opinion" id="comentario" cols="30" rows="10"></textarea>
+<hr>
+<label for="pais">seleccione su pais de origen</label>
+<select name="pais" id="">pais</select>
+<optgroup>
+    <option value="Argentina"></option>
+    <option value="Mexico"></option>
+    <option value="Peru"></option>
+</optgroup>
+<hr>
+<input type="button" value="enciar datos">
+<hr>
+<input type="reset" value="resetear tus datos">
 <a href="https://www.facebook.com/ysabelkiara.ramossanchez">facebook</a>
 
 </h1>
