se agrega el proyacto

--- a/prueba.html
+++ b/prueba.html
@@ -8,10 +8,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    
+<h1>
+<link rel="stylesheet" href="imagen.jpg">
+<style>
+   body{
+    background-color: antiquewhite; 
+  
+}
+
+</style>
+
+    <blockquote>la casita de todo</blockquote>
 </body>
-</html>
+
+<title>imagen de fondo</title>
+<link rel="stylesheet" href="stylle.css">
+<img src="imagen.jpg" alt="style.css">
+<script src="style.css"></script>
+
+<div class="imagen">
+
+</div>
+    <p>texto parrafo</p>
+
 </body>
     <meta charset="IE=8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -24,23 +43,30 @@
     <meta http-equiv="cookies" content="user, Isabel-kiara">
     <link rel="stylesheet" href="style.css">
     <hr>
-
-<title>imagen de fondo</title>
-<link rel="stylesheet" href="stylle.css">
-
-    <head>
-<body>
-
- <script src="style.css"></script>
+<head>
+ <body>
+ <header>
+  <nav>
+  <a href="home">menu</a>
+  <a href="preferencias">lista de precios</a>
+  <a href="audiovosuales">videito</a>
+  <a href="contactos">contactos</a>
+  <a href="https://www.facebook.com/ysabelkiara.ramossanchez">facebook</a>
+  </nav>
+    
+ </header>
 </body>
-    </head>
+</head>
 
-</head><h1>YsabelKiara</h1>
+
+<hr>
+
+</head><h2>YsabelKiara</h2>
  <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur quisquam libero perferendis reprehenderit, maiores ratione? Magni, minus. Perferendis pariatur eaque quod excepturi impedit! Dolorum aperiam tenetur blanditiis. A, error soluta!</p> --> 
 <button>hacer click</button>
 <input type="color" name="lila" id="lila">
 
-<img src="imagen.jpg" alt="./">
+
 <h1>
     <h2>
         ventas de temporada
@@ -83,16 +109,22 @@
      name="comentario" placeholder="escribe tu opinion" id="comentario" cols="30" rows="10"></textarea>
 <hr>
 <label for="pais">seleccione su pais de origen</label>
-<select name="pais" id="">pais</select>
-<optgroup>
-    <option value="Argentina"></option>
-    <option value="Mexico"></option>
-    <option value="Peru"></option>
-</optgroup>
+<select name="pais" id="">pais
+    <optgroup>
+        <option value="Argentina">Argentina</option>
+        <option value="Mexico">Mexico</option>
+        <option value="Peru">Peru</option>
+    </optgroup>
+</select>
+
 <hr>
-<input type="button" value="enciar datos">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/6wkRpNZRUR4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<hr>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3279.2051055448887!2d-58.48031832482067!3d-34.725224063924415!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcce62707ffe65%3A0x3d15fd2cded10201!2sLa%20Salada%20Punta%20Mogote!5e0!3m2!1ses!2sar!4v1682215776824!5m2!1ses!2sar" width="600" height="450" style="border: 0px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+<hr>
+<input type="button" value="enviar datos">
 <hr>
 <input type="reset" value="resetear tus datos">
-<a href="https://www.facebook.com/ysabelkiara.ramossanchez">facebook</a>
+
 
 </h1>
